@@ -29,6 +29,7 @@ import java.util.stream.IntStream;
 import net.minecraft.item.ItemStack;
 import net.minecraft.network.PacketBuffer;
 import net.minecraft.util.EnumChatFormatting;
+import net.minecraft.util.StatCollector;
 
 import org.jetbrains.annotations.NotNull;
 
@@ -68,7 +69,6 @@ import gregtech.api.enums.Materials;
 import gregtech.api.modularui2.GTGuiTextures;
 import gregtech.api.util.GTOreDictUnificator;
 import gregtech.api.util.GTRecipe;
-import gregtech.api.util.GTUtility;
 import gregtech.common.gui.modularui.multiblock.base.TileEntityModuleBaseGui;
 import gregtech.common.modularui2.widget.SlotLikeButtonWidget;
 import gtnhintergalactic.recipe.AsteroidData;
@@ -107,7 +107,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
 
         ListWidget<IWidget, ?> minerInfo = new ListWidget<>().child(
             IKey.dynamic(
-                () -> EnumChatFormatting.WHITE + GTUtility.translate("tt.spaceminer.textFieldDistance")
+                () -> EnumChatFormatting.WHITE + StatCollector.translateToLocal("tt.spaceminer.textFieldDistance")
                     + ": "
                     + EnumChatFormatting.GREEN
                     + (cycleSyncer.getValue() ? cycleDistanceSyncer.getValue() : distanceSyncer.getValue()))
@@ -219,7 +219,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
     }
 
     private IWidget createFilterSlotGroup(PanelSyncManager syncManager) {
-        GenericSyncValue<ItemStackHandler> filterSyncer = (GenericSyncValue<ItemStackHandler>) syncManager
+        GenericSyncValue<ItemStackHandler, ?> filterSyncer = (GenericSyncValue<ItemStackHandler, ?>) syncManager
             .findSyncHandler("filter");
 
         // Update cache if parametrizer card was used to paste config
@@ -342,7 +342,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
                 .filter(
                     asteroid -> asteroid.second()
                         .getMetadata(IGRecipeMaps.MODULE_TIER) <= multiblock.getModuleTier())
-                .collect(toList());
+                .toList();
             for (Pair<Integer, GTRecipe> asteroid : asteroidsAtDistance) {
                 if (visited.contains(asteroid.first())) continue;
                 if (Arrays.stream(asteroid.second().mOutputs)
@@ -442,7 +442,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
                 .filter(
                     asteroid -> asteroid.second()
                         .getMetadata(IGRecipeMaps.MODULE_TIER) <= multiblock.getModuleTier())
-                .collect(toList());
+                .toList();
 
             for (Pair<Integer, GTRecipe> asteroid : asteroidsAtDistance) visited.add(asteroid.first());
         }
@@ -636,8 +636,8 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
             .child(
                 new TextFieldWidget().size(60, 9)
                     .value(distanceSyncer)
-                    .setDefaultNumber(0)
-                    .setNumbers(0, Integer.MAX_VALUE));
+                    .defaultNumber(0)
+                    .numbersInt(0, Integer.MAX_VALUE));
     }
 
     private Flow createTierInputRow(PanelSyncManager syncManager) {
@@ -652,8 +652,8 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
             .child(
                 new TextFieldWidget().size(60, 9)
                     .value(moduleTierFilterSyncer)
-                    .setDefaultNumber(0)
-                    .setNumbers(0, 3));
+                    .defaultNumber(0)
+                    .numbersInt(0, 3));
     }
 
     private SlotLikeButtonWidget createUtilityPanelDroneSelector(PanelSyncManager syncManager) {
@@ -872,8 +872,8 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
     private void createDropDisplayTooltip(RichTooltip t, int i, ItemStack ore, AsteroidData data, int totalWeight) {
         t.addLine(IKey.str(ore.getDisplayName()))
             .addLine(IKey.str(String.format("%.2f%%", ((double) data.chances[i] / totalWeight) * 100)));
-        if (isAsteroidPanelForFilter)
-            t.addLine(IKey.str(EnumChatFormatting.DARK_GREEN + GTUtility.translate("tt.spaceminer.filter.addOre")));
+        if (isAsteroidPanelForFilter) t.addLine(
+            IKey.str(EnumChatFormatting.DARK_GREEN + StatCollector.translateToLocal("tt.spaceminer.filter.addOre")));
     }
 
     private IGuiAction.MousePressed createDropDisplayOnMousePressed(ItemStack ore) {
@@ -1091,10 +1091,10 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
         ModularPanel parent) {
         IntSyncValue selectedAsteroidSyncer = syncManager.findSyncHandler("selectedAsteroid", IntSyncValue.class);
         AtomicInteger distance = new AtomicInteger(0);
-        IntSyncValue distanceSyncer = new IntSyncValue(distance::get, distance::set);
+        IntSyncValue distanceSyncer = new IntSyncValue(distance::get, distance::set).allowC2S();
 
         AtomicInteger moduleTier = new AtomicInteger(0);
-        IntSyncValue moduleTierSyncer = new IntSyncValue(moduleTier::get, moduleTier::set);
+        IntSyncValue moduleTierSyncer = new IntSyncValue(moduleTier::get, moduleTier::set).allowC2S();
 
         IntSyncValue droneSyncer = syncManager.findSyncHandler("droneFilter", IntSyncValue.class);
         droneSelectorButtonCalculator = new SlotLikeButtonWidget(
@@ -1163,8 +1163,8 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
             .child(
                 new TextFieldWidget().size(60, 9)
                     .value(distanceSyncer)
-                    .setDefaultNumber(0)
-                    .setNumbers(0, Integer.MAX_VALUE));
+                    .defaultNumber(0)
+                    .numbersInt(0, Integer.MAX_VALUE));
     }
 
     private IWidget createCalculatorTierInput(IntSyncValue moduleTierSyncer) {
@@ -1178,8 +1178,8 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
             .child(
                 new TextFieldWidget().size(60, 9)
                     .value(moduleTierSyncer)
-                    .setDefaultNumber(0)
-                    .setNumbers(0, 3));
+                    .defaultNumber(0)
+                    .numbersInt(0, 3));
     }
 
     private IWidget createCalculatorDroneInput(IPanelHandler droneSelectorPanel, IntSyncValue distanceSyncer,
@@ -1296,7 +1296,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
     protected void registerSyncValues(PanelSyncManager syncManager) {
         super.registerSyncValues(syncManager);
 
-        GenericSyncValue<ItemStackHandler> filterSyncer = new GenericSyncValue<>(
+        GenericSyncValue<ItemStackHandler, ?> filterSyncer = new GenericSyncValue<>(
             ItemStackHandler.class,
             () -> multiblock.filterInventory,
             handler -> multiblock.filterInventory = handler,
@@ -1308,7 +1308,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
 
         BooleanSyncValue isWhiteListedSyncer = new BooleanSyncValue(
             () -> multiblock.isWhitelisted,
-            val -> multiblock.isWhitelisted = val);
+            val -> multiblock.isWhitelisted = val).allowC2S();
         syncManager.syncValue("isWhiteListed", isWhiteListedSyncer);
 
         IntSyncValue droneTierSyncer = new IntSyncValue(
@@ -1317,7 +1317,7 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
         syncManager.syncValue("droneTier", droneTierSyncer);
 
         AtomicInteger droneFilter = new AtomicInteger(-1);
-        IntSyncValue droneFilterSyncer = new IntSyncValue(droneFilter::get, droneFilter::set);
+        IntSyncValue droneFilterSyncer = new IntSyncValue(droneFilter::get, droneFilter::set).allowC2S();
         syncManager.syncValue("droneFilter", droneFilterSyncer);
 
         AtomicInteger targetDroneTier = new AtomicInteger(-1);
@@ -1325,19 +1325,19 @@ public class TileEntityModuleMinerGui extends TileEntityModuleBaseGui<TileEntity
         syncManager.syncValue("droneTarget", targetDroneTierSyncer);
 
         AtomicInteger selectedAsteroid = new AtomicInteger(0);
-        IntSyncValue selectedAsteroidSyncer = new IntSyncValue(selectedAsteroid::get, selectedAsteroid::set);
+        IntSyncValue selectedAsteroidSyncer = new IntSyncValue(selectedAsteroid::get, selectedAsteroid::set).allowC2S();
         syncManager.syncValue("selectedAsteroid", selectedAsteroidSyncer);
 
         AtomicReference<String> oreFilter = new AtomicReference<>("");
-        StringSyncValue oreFilterSyncer = new StringSyncValue(oreFilter::get, oreFilter::set);
+        StringSyncValue oreFilterSyncer = new StringSyncValue(oreFilter::get, oreFilter::set).allowC2S();
         syncManager.syncValue("oreFilter", oreFilterSyncer);
 
         AtomicInteger distanceFilter = new AtomicInteger(0);
-        IntSyncValue distanceFilterSyncer = new IntSyncValue(distanceFilter::get, distanceFilter::set);
+        IntSyncValue distanceFilterSyncer = new IntSyncValue(distanceFilter::get, distanceFilter::set).allowC2S();
         syncManager.syncValue("distanceFilter", distanceFilterSyncer);
 
         AtomicInteger moduleTierFilter = new AtomicInteger(0);
-        IntSyncValue moduleTierFilterSyncer = new IntSyncValue(moduleTierFilter::get, moduleTierFilter::set);
+        IntSyncValue moduleTierFilterSyncer = new IntSyncValue(moduleTierFilter::get, moduleTierFilter::set).allowC2S();
         syncManager.syncValue("moduleTierFilter", moduleTierFilterSyncer);
 
     }
